
syntax = "proto3";
package grpcService; // 包名


message CommonField {
    string pageIndex = 1;
    string pageSize = 2;
}

service ActivityService {
    rpc CreateActivity (CreateActivityRequestType) returns (CreateActivityResponseType) {}
    rpc DeleteActivity (DeleteActivityRequestType) returns (DeleteActivityResponseType) {}
    rpc UpdateActivity (UpdateActivityRequestType) returns (UpdateActivityResponseType) {}
    rpc FindActivity (FindActivityRequestType) returns (FindActivityResponseType) {}
}

//Activity
message Activity {

    int32 id = 1;
    string name = 2;
    string content = 3;
    int32 cost = 4;
    int32 numberLimit = 5;
    int32 creater = 6;
    string posters = 7;
    string startTime = 8;
    string endTime = 9;
}

message CreateActivityRequestType{

    int32 id = 1;
    string name = 2;
    string content = 3;
    int32 cost = 4;
    int32 numberLimit = 5;
    int32 creater = 6;
    string posters = 7;
    string startTime = 8;
    string endTime = 9;
}

message CreateActivityResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message DeleteActivityRequestType{
    string id = 1;
}

message DeleteActivityResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message UpdateActivityRequestType{

    int32 id = 1;
    string name = 2;
    string content = 3;
    int32 cost = 4;
    int32 numberLimit = 5;
    int32 creater = 6;
    string posters = 7;
    string startTime = 8;
    string endTime = 9;
}

message UpdateActivityResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message FindActivityRequestType{
    Activity entity = 1;
    CommonField commonField = 2;
}

message FindActivityResponseType{
    repeated Activity data = 1;
    int32 responseCode = 2;
    string responseDesc =  3;
}

service ActivityRelationService {
    rpc CreateActivityRelation (CreateActivityRelationRequestType) returns (CreateActivityRelationResponseType) {}
    rpc DeleteActivityRelation (DeleteActivityRelationRequestType) returns (DeleteActivityRelationResponseType) {}
    rpc UpdateActivityRelation (UpdateActivityRelationRequestType) returns (UpdateActivityRelationResponseType) {}
    rpc FindActivityRelation (FindActivityRelationRequestType) returns (FindActivityRelationResponseType) {}
}

//ActivityRelation
message ActivityRelation {

    int32 id = 1;
    string joiner = 2;
    int32 activityId = 3;
}

message CreateActivityRelationRequestType{

    int32 id = 1;
    string joiner = 2;
    int32 activityId = 3;
}

message CreateActivityRelationResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message DeleteActivityRelationRequestType{
    string id = 1;
}

message DeleteActivityRelationResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message UpdateActivityRelationRequestType{

    int32 id = 1;
    string joiner = 2;
    int32 activityId = 3;
}

message UpdateActivityRelationResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message FindActivityRelationRequestType{
    ActivityRelation entity = 1;
    CommonField commonField = 2;
}

message FindActivityRelationResponseType{
    repeated ActivityRelation data = 1;
    int32 responseCode = 2;
    string responseDesc =  3;
}

service FileService {
    rpc CreateFile (CreateFileRequestType) returns (CreateFileResponseType) {}
    rpc DeleteFile (DeleteFileRequestType) returns (DeleteFileResponseType) {}
    rpc UpdateFile (UpdateFileRequestType) returns (UpdateFileResponseType) {}
    rpc FindFile (FindFileRequestType) returns (FindFileResponseType) {}
}

//File
message File {

    int32 id = 1;
    int32 label = 2;
    int32 createBy = 3;
    string fileName = 4;
    string storageKey = 5;
    string bucket = 6;
}

message CreateFileRequestType{

    int32 id = 1;
    int32 label = 2;
    int32 createBy = 3;
    string fileName = 4;
    string storageKey = 5;
    string bucket = 6;
}

message CreateFileResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message DeleteFileRequestType{
    string id = 1;
}

message DeleteFileResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message UpdateFileRequestType{

    int32 id = 1;
    int32 label = 2;
    int32 createBy = 3;
    string fileName = 4;
    string storageKey = 5;
    string bucket = 6;
}

message UpdateFileResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message FindFileRequestType{
    File entity = 1;
    CommonField commonField = 2;
}

message FindFileResponseType{
    repeated File data = 1;
    int32 responseCode = 2;
    string responseDesc =  3;
}

service UserService {
    rpc CreateUser (CreateUserRequestType) returns (CreateUserResponseType) {}
    rpc DeleteUser (DeleteUserRequestType) returns (DeleteUserResponseType) {}
    rpc UpdateUser (UpdateUserRequestType) returns (UpdateUserResponseType) {}
    rpc FindUser (FindUserRequestType) returns (FindUserResponseType) {}
}

//User
message User {

    int32 id = 1;
    string wechatID = 2;
    string phone = 3;
    string email = 4;
}

message CreateUserRequestType{

    int32 id = 1;
    string wechatID = 2;
    string phone = 3;
    string email = 4;
}

message CreateUserResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message DeleteUserRequestType{
    string id = 1;
}

message DeleteUserResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message UpdateUserRequestType{

    int32 id = 1;
    string wechatID = 2;
    string phone = 3;
    string email = 4;
}

message UpdateUserResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message FindUserRequestType{
    User entity = 1;
    CommonField commonField = 2;
}

message FindUserResponseType{
    repeated User data = 1;
    int32 responseCode = 2;
    string responseDesc =  3;
}

service UserinfoService {
    rpc CreateUserinfo (CreateUserinfoRequestType) returns (CreateUserinfoResponseType) {}
    rpc DeleteUserinfo (DeleteUserinfoRequestType) returns (DeleteUserinfoResponseType) {}
    rpc UpdateUserinfo (UpdateUserinfoRequestType) returns (UpdateUserinfoResponseType) {}
    rpc FindUserinfo (FindUserinfoRequestType) returns (FindUserinfoResponseType) {}
}

//Userinfo
message Userinfo {

    int32 id = 1;
    string gender = 2;
    string name = 3;
    string idcard = 4;
    string wechatID = 5;
    string address = 6;
    string avatarUrl = 7;
}

message CreateUserinfoRequestType{

    int32 id = 1;
    string gender = 2;
    string name = 3;
    string idcard = 4;
    string wechatID = 5;
    string address = 6;
    string avatarUrl = 7;
}

message CreateUserinfoResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message DeleteUserinfoRequestType{
    string id = 1;
}

message DeleteUserinfoResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message UpdateUserinfoRequestType{

    int32 id = 1;
    string gender = 2;
    string name = 3;
    string idcard = 4;
    string wechatID = 5;
    string address = 6;
    string avatarUrl = 7;
}

message UpdateUserinfoResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message FindUserinfoRequestType{
    Userinfo entity = 1;
    CommonField commonField = 2;
}

message FindUserinfoResponseType{
    repeated Userinfo data = 1;
    int32 responseCode = 2;
    string responseDesc =  3;
}
